Corrected the overlapping issue of section 3 on section 2 by decreasing the viewport height.

--- a/assets/fresh/partials/_sections.scss
+++ b/assets/fresh/partials/_sections.scss
@@ -61,7 +61,7 @@ Section Styles
 
 //Pulled image
 img.pushed-image {
-    margin-top: -29vh;
+    margin-top: -8vh;
 }
 
 //Icon box
